--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "moh/bld",
+    "name": "rod/bld",
     "description": "BLD e-Sports Team: A Counter-Strike team management system",
     "autoload": {
         "psr-4": {
