--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,9 @@
             "email": "2158177@talnet.nl"
         }
     ],
+    "require-dev": {
+        "phpunit/phpunit": "^11.5"
+    },
     "require": {},
     "license": "proprietary",
     "config": {
